Closed Bug 1718629 Opened 4 years ago Closed 4 years ago

Windows 11 Snap Layouts menu doesn't appear while hovering

Categories

(Firefox :: Theme, defect)

Firefox 91
Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
94 Branch
Tracking Status
relnote-firefox --- 94+
firefox-esr78 --- wontfix
firefox-esr91 - wontfix
firefox91 --- wontfix
firefox92 --- wontfix
firefox93 + wontfix
firefox94 --- verified

People

(Reporter: kristoffer, Assigned: handyman)

References

(Blocks 1 open bug)

Details

Attachments

(3 files)

When hovering the maximize/minimize window button on Windows 11, a hover menu to snap the window is supposed to appear.

On Firefox 91, the Snap Layouts hover menu doesn't appear.

Summary: Windows 11 Snap Layouts menu doesn't appear when hovering → Windows 11 Snap Layouts menu doesn't appear while hovering

Win 11 snap menu will show if you customize the toolbar and force the titlebar to show, but will stop working if you hide the titlebar. Needs a workaround for those of us that prefer to hide the titlebar.

Windows Terminal also uses a custom title bar. This is the GitHub issue tracking this: https://github.com/microsoft/terminal/issues/9443

Severity: -- → S3
Assignee: nobody → davidp99

[Tracking Requested - why for this release]: Per https://www.microsoft.com/en-us/windows/windows-11 "Windows 11 isn’t here yet, but will be coming later this year. "

¡Hola y'all!

Hope these lines find you well.

Confirming this bug as it has been confirmed by multiple users in:

Found some workarounds:

  • press Win + Z for the snap options to appear
  • enable the "Title bar" in the UI customization so the snap options appear when hovering

I can also confirm this bug exists on Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:93.0) Gecko/20100101 Firefox/93.0 ID:20210829092700

¡Gracias!
Alex

Status: UNCONFIRMED → NEW
Ever confirmed: true
See Also: → 1728029
See Also: → 1727663
Attachment #9238568 - Attachment description: WIP: Bug 1718629: Handle Windows WM_NCHITTEST message for maximize button → Bug 1718629: Handle Windows WM_NCHITTEST message for maximize button r=emilio!,cmartin!
Pushed by daparks@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e03c235c93c8 Handle Windows WM_NCHITTEST message for maximize button r=emilio,cmartin
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch

David, should we uplift that to beta? Windows 11 is announced to ship when we ship 93 on October 5.

Flags: needinfo?(davidp99)

Uplift is a good idea and I'm pretty sure this is fine for it but I want to give it a day or two on nightly first. (I'll leave the NI open for now.)

Regressions: 1729749
See Also: → 1729744
Regressions: 1730312

David, do we want to uplift that patch and the fixes for the regressions it caused into beta or is that too risky and we should let it ride the 94 train? Thanks

If we uplift this patch, we will also have to uplift patches for follow-up bugs (1729742, 1729749, 1730312, and 1730309) including not yet resolved one.

Bug 1730309 is a regression that is still active and looks like its going to expand the complexity in the patch series so uplift isn't a good idea.

Flags: needinfo?(davidp99)

The patch landed in nightly and beta is affected.
:handyman, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
If yes, don't forget to request an uplift for the patches in the regressions caused by this fix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(davidp99)
Flags: needinfo?(davidp99)

This bug is verified as fixed on latest Beta 94.0b5 under Win 11. I can confirm that snap layouts are correctly displayed, and the functionally is working as expected.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

Release Note Request (optional, but appreciated)
[Why is this notable]: New Windows 11 feature that we didn't support previously
[Affects Firefox for Android]: No.
[Suggested wording]: Firefox now supports the new Snap Layouts menus when running on Windows 11.
[Links (documentation, blog post, etc)]: Only this bug.

relnote-firefox: --- → ?

Added to the final Fx94 relnotes. Also, I don't think this is worth backporting to ESR91, so marking that wontfix while I'm here.

See Also: → 1801956
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: