Bug 1718629: Handle Windows WM_NCHITTEST message for maximize button r=emilio,cmartin

Windows 11's Snap Layouts feature generates a window of layout options when the maximize window button is moused over.  This requires the WM_NCHITTEST message to handle hit detection for the button.  Since WM_NCHITTEST messages are very common, although we limit them to no more than every 50ms, we don't want to do a full hit test each time.  Instead, we cache the maximize button rect in the widget when it is positioned during layout.

Differential Revision: https://phabricator.services.mozilla.com/D123982