xpcom/ds/StaticAtoms.py
@@ -1206,6 +1206,7 @@ STATIC_ATOMS = [
     Atom("time", "time"),
     Atom("title", "title"),
     Atom("titlebar", "titlebar"),
+    Atom("titlebar_max_button","titlebar-max-btn"),
     Atom("titletip", "titletip"),
     Atom("token", "token"),
     Atom("tokenize", "tokenize"),
